已完成资产检索与模板检索的同类问题排查和修复。 主要修复： 抽象统一的检索变体协议，支持 intentCandidates.queries、中英文意图、别名、关键词等独立召回，不再拼成长查询：[DiscoveryQueryVariants.java (line 30)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/search/DiscoveryQueryVariants.java:30) 通用资产检索按变体分别召回、评分并按资产合并，覆盖 SSH、数据库、HTTP 和微服务资产：[AssetDiscoveryService.java (line 164)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/routing/AssetDiscoveryService.java:164) API 资产检索复用统一变体协议，并保留此前加入的数据身份说明。 API 模板检索现在会读取输入输出定义、能力说明、依赖说明、治理配置和字段注释参与召回：[ApiTemplateDiscoveryMcpToolPublisher.java (line 516)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/api/ApiTemplateDiscoveryMcpToolPublisher.java:516) 通用模板检索覆盖 SSH、SQL、HTTP、JMX 和数据库查询；不同类型通过各自元数据适配器提供身份信号：[CommandTemplateDiscoveryService.java (line 2836)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/ops/CommandTemplateDiscoveryService.java:2836) 动态发布的模板查询工具本身委托上述 API/通用模板检索，因此同步获得修复。 检索结果增加 retrievalVariants、variantPolicy 和命中变体记录，便于治理层观察召回原因。 召回与最终准入分层：元数据可以扩大召回，但 sql、mysql、object 等内部宽泛信号不会直接导致误选。 新增场景覆盖： 多意图嵌套查询提取：[DiscoveryQueryVariantsTest.java (line 13)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/test/java/com/chatchat/mcpserver/search/DiscoveryQueryVariantsTest.java:13) 通用资产多意图召回：[AssetDiscoveryServiceTest.java (line 24)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/test/java/com/chatchat/mcpserver/routing/AssetDiscoveryServiceTest.java:24) API 字段注释与能力说明召回：[ApiTemplateDiscoveryMcpToolPublisherTest.java (line 26)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/test/java/com/chatchat/mcpserver/api/ApiTemplateDiscoveryMcpToolPublisherTest.java:26) 数据库能力元数据与资产分析意图召回：[CommandTemplateDiscoveryServiceTest.java (line 1393)](D:/IdeaProjects/